# kundera

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  MAINTAINENCE_SKILL.md  build.zig  build.zig.zon  bunfig.toml  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json  tsup.config.ts  typedoc.json
.claude/cache/: AUDIT_SUMMARY.md  DOCS_PLAN.md  MISSING_PRIMITIVES.md  kundera-effect-audit.md  voltaire-effect-examples.md  voltaire-effect-patterns.md  voltaire-schema-patterns.md
.github/workflows/: ci.yml  release-effect.yml  release.yml
.tickets/: 001-guardrails-non-legacy.md  010-primitives-felt252-shortstring.md  020-primitives-address-types.md  030-primitives-index-and-api.md  040-crypto-modularization.md  050-serde-modularization.md  060-abi-modularization.md  070-native-wasm-loader-modularization.md  080-kundera-effect-primitives-schemas.md  090-kundera-effect-rpc-and-services.md  100-build-exports-cleanup.md  110-tests-reorg.md
development/: INTEGRATION_TESTING.md
docs/: README.md  docs.json  index.mdx  introduction.mdx
docs/api/: abi.mdx  account.mdx  contract.mdx  crypto.mdx  primitives.mdx  provider.mdx  rpc.mdx  serde.mdx  transport.mdx  wallet.mdx
docs/comparisons/: starknetjs.mdx  voltaire.mdx
kundera-effect/: README.md  TYPE_ERRORS_REPORT.md  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
scripts/: add-typedoc-frontmatter.ts  build.sh  fix-all-links.mjs  fix-docs-links.mjs  package-native.ts  setup-docs.ts  update-docs-navigation.ts  verify-docs-links.mjs
src/: api-interface.ts  index.ts
(+510 files in other folders)
